# angelicidee

./: Makefile  main.py  pyproject.toml
angelicidee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
games_project_cherepanov/: engine.py
games_project_cherepanov/VD_games/scripts/: VD_games.py  VD_main.py  brain_calc.py  vd_even.py  vd_gcd.py  vd_prime.py  vd_progression.py
games_project_cherepanov/games/: calc.py  even.py  gcd.py  prime.py  progression.py
shtoo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
