[project]
name = "angelicidee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
vd-games = "games_project_cherepanov.VD_games.scripts.vd_games:main"
vd-even = "games_project_cherepanov.VD_games.scripts.vd_even:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true


[tool.setuptools.packages.find]
include = ["games_project_cherepanov*"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.hatch.build.targets.wheel]
packages = ["games_project_cherepanov"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D200", "D205", "D212", "D400", "D401", "D402", "D412"]